[gd_scene load_steps=9 format=3 uid="uid://biburdoup3tys"]

[ext_resource type="Script" uid="uid://fu5g1qykfyrg" path="res://Scripts/level_editor.gd" id="1_5o76e"]
[ext_resource type="Script" uid="uid://dvthn52pxarsw" path="res://Scripts/camera_controller.gd" id="2_s1b0e"]
[ext_resource type="Script" uid="uid://b12pccb6bgt2j" path="res://Scripts/grid_visualizer.gd" id="3_n1xa8"]
[ext_resource type="Script" uid="uid://d2w0q8uv3eeuf" path="res://Scripts/cursor_visualizer.gd" id="4_rot6e"]
[ext_resource type="Script" uid="uid://vy5kk1hqmj06" path="res://Scripts/right_side_menu.gd" id="5_wchaa"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_5o76e"]

[sub_resource type="Sky" id="Sky_s1b0e"]
sky_material = SubResource("PhysicalSkyMaterial_5o76e")

[sub_resource type="Environment" id="Environment_n1xa8"]
background_mode = 2
sky = SubResource("Sky_s1b0e")

[node name="level_editor" type="Node3D"]
script = ExtResource("1_5o76e")

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("2_s1b0e")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n1xa8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0335913, 0.9994356, 0, -0.9994356, -0.0335913, 0, 0, 0)
light_energy = 6.0
shadow_enabled = true

[node name="GridVisualizer" type="Node3D" parent="."]
script = ExtResource("3_n1xa8")

[node name="CursorVisualizer" type="Node3D" parent="."]
script = ExtResource("4_rot6e")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RightSideMenu" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -326.0
offset_bottom = 221.0
grow_horizontal = 0
script = ExtResource("5_wchaa")

[node name="YLevel" type="Label" parent="UI/RightSideMenu"]
layout_mode = 2
text = "Current Y-Level: 0"

[node name="OffsetFold" type="FoldableContainer" parent="UI/RightSideMenu"]
layout_mode = 2
title = "Offset"

[node name="PanelContainer" type="PanelContainer" parent="UI/RightSideMenu/OffsetFold"]
layout_mode = 2

[node name="OffsetVContain" type="VBoxContainer" parent="UI/RightSideMenu/OffsetFold/PanelContainer"]
layout_mode = 2

[node name="XOffsetLabel" type="Label" parent="UI/RightSideMenu/OffsetFold/PanelContainer/OffsetVContain"]
layout_mode = 2
text = "X Offset"

[node name="XSpin" type="SpinBox" parent="UI/RightSideMenu/OffsetFold/PanelContainer/OffsetVContain"]
layout_mode = 2
min_value = -0.999
max_value = 0.999
step = 0.01
value = 0.0010000000000000009
allow_greater = true
allow_lesser = true

[node name="YOffsetLabel" type="Label" parent="UI/RightSideMenu/OffsetFold/PanelContainer/OffsetVContain"]
layout_mode = 2
text = "Z Offset"

[node name="ZSpin" type="SpinBox" parent="UI/RightSideMenu/OffsetFold/PanelContainer/OffsetVContain"]
layout_mode = 2
min_value = -0.999
max_value = 0.999
step = 0.01
value = 0.0010000000000000009
allow_greater = true
allow_lesser = true

[node name="OffsetConfirmButton" type="Button" parent="UI/RightSideMenu/OffsetFold/PanelContainer/OffsetVContain"]
layout_mode = 2
text = "Confirm"

[node name="Controls" type="Label" parent="UI"]
layout_mode = 0
offset_right = 225.0
offset_bottom = 319.0
text = "WASD -> MOVE
LMB -> PLACE
RMB -> REMOVE
MMB -> LOOK AROUND
MWHEELUP -> ZOOM IN
WHEELDOWN -> ZOOM OUT
CTRL + MMB -> RESET VIEW
ENTER -> WIREFRAMES
BACKSPACE -> DEFAULT VIEW
[ --> LAYER UP
] --> LAYER DOWN
1... 2... -> BLOCK TYPE"

[connection signal="level_changed" from="GridVisualizer" to="UI/RightSideMenu" method="_on_grid_visualizer_level_changed"]
[connection signal="pressed" from="UI/RightSideMenu/OffsetFold/PanelContainer/OffsetVContain/OffsetConfirmButton" to="UI/RightSideMenu" method="_on_offset_confirm_button_pressed"]
